src/XmlMDataStd/XmlMDataStd_NameDriver.cxx
@@ -53,11 +53,11 @@ Standard_Boolean XmlMDataStd_NameDriver::Paste
                                 const Handle(TDF_Attribute)& theTarget,
                                 XmlObjMgt_RRelocationTable&  ) const
 {
-  if(!theTarget.IsNull()) {	
+  if(!theTarget.IsNull()) {
     TCollection_ExtendedString aString;
     if (XmlObjMgt::GetExtendedString (theSource, aString))
     {
-      Handle(TDataStd_Name)::DownCast(theTarget) -> Set (aString);    
+      Handle(TDataStd_Name)::DownCast(theTarget) -> Set (aString);
       // attribute id
       Standard_GUID aGUID;
       const XmlObjMgt_Element& anElement = theSource;
@@ -68,7 +68,7 @@ Standard_Boolean XmlMDataStd_NameDriver::Paste
         aGUID = Standard_GUID(Standard_CString(aGUIDStr.GetString())); // user defined case
 
       Handle(TDataStd_Name)::DownCast(theTarget)->SetID(aGUID);
-	  return Standard_True;
+      return Standard_True;
     }
   }
   myMessageDriver->Send("error retrieving ExtendedString for type TDataStd_Name", Message_Fail);
